force-app/main/default/objects/FieloDRE__RuleApplied__c/FieloDRE__RuleApplied__c.object-meta.xml
<CustomObject>
    <label>Rule Applied</label>
    <nameField>
        <displayFormat>RA-{000000}</displayFormat>
        <label>Rule Applied Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rules Applied</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>