force-app/main/default/objects/FieloDRE__RuleApplied__c/fields/FieloDRE__Member__c.field-meta.xml
<CustomField>
    <fullName>FieloDRE__Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member</label>
    <referenceTo>FieloEE__Member__c</referenceTo>
    <relationshipName>Fielo_RuleApplied</relationshipName>
    <type>Lookup</type>
</CustomField>