force-app/main/default/objects/FieloDRE__RuleApplied__c/fields/FieloDRE__Points__c.field-meta.xml
<CustomField>
    <fullName>FieloDRE__Points__c</fullName>
    <label>Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>