force-app/main/default/objects/FieloDRE__RuleApplied__c/fields/FieloDRE__PointsDecimal__c.field-meta.xml
<CustomField>
    <fullName>FieloDRE__PointsDecimal__c</fullName>
    <label>Points Decimal</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>