force-app/main/default/objects/FieloDRE__RuleApplied__c/fields/FieloDRE__Promotion__c.field-meta.xml
<CustomField>
    <fullName>FieloDRE__Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion</label>
    <referenceTo>FieloEE__Promotion__c</referenceTo>
    <relationshipName>Fielo_RuleApplied</relationshipName>
    <type>Lookup</type>
</CustomField>