force-app/main/default/objects/FieloDRE__RuleApplied__c/fields/FieloDRE__Rule__c.field-meta.xml
<CustomField>
    <fullName>FieloDRE__Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rule</label>
    <referenceTo>FieloEE__Rule__c</referenceTo>
    <relationshipName>Fielo_RuleApplied</relationshipName>
    <type>Lookup</type>
</CustomField>