force-app/main/default/objects/FieloDRE__RuleApplied__c/fields/FieloDRE__RuleDescription__c.field-meta.xml
<CustomField>
    <fullName>FieloDRE__RuleDescription__c</fullName>
    <label>Rule Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>