force-app/main/default/objects/FieloDRE__RuleApplied__c/fields/FieloDRE__Transaction__c.field-meta.xml
<CustomField>
    <fullName>FieloDRE__Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>FieloEE__Transaction__c</referenceTo>
    <relationshipLabel>Rules Applied</relationshipLabel>
    <relationshipName>Rules_Applied</relationshipName>
    <type>Lookup</type>
</CustomField>